<resources>
    <string name="app_name">unitconverterApp</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="c">C</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="one">1</string>
    <string name="u27f2">⟲</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_seven">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="ft">ft</string>
    <string name="foot">Foot</string>
    <string name="_3_2804">3.2804</string>
    <string name="m">m</string>
    <string name="meter">Meter</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="u232b">⌫</string>
</resources>