<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background1">
    <soup.neumorphism.NeumorphCardView
        android:id="@+id/input_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:neumorph_shadowColorDark="@color/background1"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shapeType="basin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/_1"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:layout_marginEnd="20dp"
            >

        </TextView>

        <TextView
            android:id="@+id/Meter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:text="@string/meter"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:textSize="30sp" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnmt"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/m"
            android:textColor="@color/btn_text_color"
            app:neumorph_shadowColorDark="@color/background1"
            app:neumorph_shadowColorLight="@color/background"
            android:textSize="30sp"
            android:gravity="center">
        </soup.neumorphism.NeumorphButton>
    </soup.neumorphism.NeumorphCardView>
    <soup.neumorphism.NeumorphCardView
        android:id="@+id/output_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:neumorph_shadowColorDark="@color/background1"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shapeType="basin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_card">
        <TextView
            android:id="@+id/Output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/_3_2804"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:layout_marginEnd="20dp"
            >

        </TextView>

        <TextView
            android:id="@+id/Foot"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:text="@string/foot"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:textSize="30sp" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnft"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:text="@string/ft"
            app:neumorph_shadowColorDark="@color/background1"
            app:neumorph_shadowColorLight="@color/background"
            android:textSize="30sp"
            android:textColor="@color/btn_text_color"
            android:gravity="center">

        </soup.neumorphism.NeumorphButton>

    </soup.neumorphism.NeumorphCardView>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="58dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/output_card">
    <TableRow>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_7"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_9"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:visibility="invisible"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_7"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />

    </TableRow>
    <TableRow>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_4"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/_6"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnrestart"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:text="@string/u27f2"
            android:textColor="@color/btn_text_color"
            android:textSize="40sp"
            app:neumorph_shadowColorLight="@color/background"
            app:neumorph_shadowColorDark="@color/background1"
            />

    </TableRow>
    <TableRow>
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btn1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btn2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btn3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/_3"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
android:id="@+id/btnClear"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/c"
        android:textColor="@color/btn_text_color"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />

</TableRow>
    <TableRow>
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btn00"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/_00"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btn0"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
        android:id="@+id/btndot"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/dot"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
    <soup.neumorphism.NeumorphButton
android:id="@+id/btnbackspace"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/u232b"
        android:textColor="@color/btn_text_color"
        android:textSize="40sp"
        app:neumorph_shadowColorLight="@color/background"
        app:neumorph_shadowColorDark="@color/background1"
        />
</TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>